# LBP

./: CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
src/: CMakeLists.txt  main.cpp  mytools.cpp  mytools.h
src/cmake/: FindLIBIGL.cmake
